--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,7 +8,7 @@ jobs:
   npm-build:
     name: npm-build工作
     runs-on: ubuntu-latest
-    
+
     steps:
       - name: 读取仓库内容
         uses: actions/checkout@v4
@@ -19,5 +19,6 @@ jobs:
       - name: 部署到gh-pages
         uses: peaceiris/actions-gh-pages@v3
         with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
           branch: gh-pages
           folder: dist
